tests/hulk/errors/semantic/undeclared_type.hulk
function foo(x: FooType): Number { 0; }
print(foo(5));
